Fixed plus cell size bug on overflow

--- a/src/app/components/board/matrix/matrix.css
+++ b/src/app/components/board/matrix/matrix.css
@@ -20,8 +20,6 @@
 .cell {
     position: relative;
     border: 1px dashed black;
-    width: 150px;
-    height: 150px;
     text-align: center;
     transition: background-color 0.3s;
 }
@@ -31,8 +29,8 @@
 }
 
 .plus-icon-container {
-    width: 100%;
-    height: 100%;
+    width: 150px;
+    height: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
